--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
