--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "dompurify": "^3.2.6",
     "emailjs-com": "^3.2.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-quilljs": "^2.0.5",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11",
